# python_mobile_1

./: config.personal.env.example  config.py  pyproject.toml  requirements.txt
tests/: browserstack_sample.py  conftest.py
utils/: attach.py  browserstack.py  path.py
